# License-Plate-Recognition-v2

./: .gitignore  README.md
infer_cxx/: CMakeLists.txt  CMakeSettings.json  argparsing.h  constants.h  coord_lp.cpp  coord_lp.h  main.cpp  proc_img.cpp  proc_img.h  utils.cpp  utils.h
infer_cxx/cmake/: onnxruntimesetup.cmake
preprocess/: select_train_lp_yolo.py  split_alpha.py
preprocess/utils/: alphabet.py  coord_lp.py  lp_proc.py
resnet/: export_onnx.py  run_onnx.py  train.py
yolo/: pred.py  to_onnx.py  train.py
